@@ -1,3 +1,10 @@
+linuxmuster-linbo (2.3.35-0) babo62; urgency=low
+
+  * lmn7:
+    - minor fixes in rsync scripts.
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Fri, 16 Feb 2018 18:35:33 +0000
+
 linuxmuster-linbo (2.3.34-0) babo62; urgency=low
 
   * efi bootorder fix.
